--- a/conf/.env.example
+++ b/conf/.env.example
@@ -1,67 +1,135 @@
-APP_NAME=Lychee
 APP_ENV=production
-APP_KEY=
+
+# Set to true if debugging
 APP_DEBUG=false
-APP_URL=http://localhost
 
-# enable or disable debug bar. By default it is disabled.
-DEBUGBAR_ENABLED=false
+# 32-character key (e.g 3EWBLwxTfh%*f&xRBqdGEIUVvn4%$Hfi)
+APP_KEY={{$APP_KEY}}
 
-LOG_CHANNEL=stack
+# Your app's name (shown on interface)
+APP_NAME={{$APP_NAME}}
 
-##############################################################################
-# IMPORTANT: To migrate from Lychee v3 you *MUST* use the same MySQL/MariaDB #
-#            server as v3.                                                   #
-##############################################################################
+# Protocol to access your app. e.g https://
+APP_PROTOCOL={{$APP_PROTOCOL}}
 
-# Table prefix (e.g. lychee_) of a Lychee v3 instance for migration
-DB_OLD_LYCHEE_PREFIX=
+# Your app's external address (e.g example.com)
+APP_ADDRESS=__DOMAIN__
 
-# DB_CONNECTION can be sqlite, mysql or pgsql. For sqlite the other entries are
-# not required, but an existing sqlite3 database may be specified if desired. In
-# this case, please use an absolute path. DB_DATABASE may be omitted but should
-# *not* be left blank.
+# Your app's bootstrap stylesheet
+# e.g https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css
+APP_STYLESHEET={{$APP_STYLESHEET}}
+
+# Set to today's date (e.g November 3, 2015)
+POLR_GENERATED_AT={{$POLR_GENERATED_AT}}
+
+# Set to true after running setup script
+# e.g true
+POLR_SETUP_RAN={{$POLR_SETUP_RAN}}
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+# Set to your DB host (e.g localhost)
+DB_HOST=localhost
+# DB port (e.g 3306)
+DB_PORT={{$DB_PORT}}
+# Set to your DB name (e.g polr)
 DB_DATABASE=__DB_NAME__
+# DB credentials
+# e.g root
 DB_USERNAME=__DB_NAME__
 DB_PASSWORD=__DB_PASS__
-DB_LOG_SQL=false
 
-TIMEZONE=UTC
+# Polr Settings
 
-# folders in which the files will be stored
-LYCHEE_DIST="__FINALPATH__/public/dist/"
-LYCHEE_UPLOADS="/home/yunohost.app/__APP__/uploads/"
+# Set to true to show an interface to logged off users
+# If false, set the SETTING_INDEX_REDIRECT
+# You may login by heading to /login if the public interface is off
+SETTING_PUBLIC_INTERFACE={{$ST_PUBLIC_INTERFACE}}
 
-# url to access those files
-# LYCHEE_DIST_URL="dist/"
-# LYCHEE_UPLOADS_URL="uploads/"
+# Set to true to allow signups, false to disable (e.g true/false)
+POLR_ALLOW_ACCT_CREATION={{$POLR_ALLOW_ACCT_CREATION}}
 
-BROADCAST_DRIVER=log
+# Set to true to require activation by email (e.g true/false)
+POLR_ACCT_ACTIVATION={{$POLR_ACCT_ACTIVATION}}
+
+# Set to true to require users to be logged in before shortening URLs
+SETTING_SHORTEN_PERMISSION={{$ST_SHORTEN_PERMISSION}}
+
+# You must set SETTING_INDEX_REDIRECT if SETTING_PUBLIC_INTERFACE is false
+# Polr will redirect logged off users to this URL
+SETTING_INDEX_REDIRECT={{$ST_INDEX_REDIRECT}}
+
+# Set to true if you wish to redirect 404s to SETTING_INDEX_REDIRECT
+# Otherwise, an error message will be shown
+SETTING_REDIRECT_404={{$ST_REDIRECT_404}}
+
+# Set to true to enable password recovery
+SETTING_PASSWORD_RECOV={{$ST_PASSWORD_RECOV}}
+
+# Set to true to generate API keys for each user on registration
+SETTING_AUTO_API={{$ST_AUTO_API}}
+
+# Set to true to allow anonymous API access
+SETTING_ANON_API={{$ST_ANON_API}}
+
+# Set the anonymous API quota per IP
+SETTING_ANON_API_QUOTA={{$ST_ANON_API_QUOTA}}
+
+# Set to true to use pseudorandom strings rather than using a counter by default
+SETTING_PSEUDORANDOM_ENDING={{$ST_PSEUDOR_ENDING}}
+
+# Set to true to record advanced analytics
+SETTING_ADV_ANALYTICS={{$ST_ADV_ANALYTICS}}
+
+# Set to true to restrict registration to a specific email domain
+SETTING_RESTRICT_EMAIL_DOMAIN={{$ST_RESTRICT_EMAIL_DOMAIN}}
+
+# A comma-separated list of permitted email domains
+SETTING_ALLOWED_EMAIL_DOMAINS={{$ST_ALLOWED_EMAIL_DOMAINS}}
+
+# Set each to blank to disable mail
+@if($MAIL_ENABLED)
+MAIL_DRIVER=smtp
+# e.g mailtrap.io
+MAIL_HOST={{$MAIL_HOST}}
+# e.g 2525
+MAIL_PORT={{$MAIL_PORT}}
+MAIL_USERNAME={{$MAIL_USERNAME}}
+MAIL_PASSWORD={{{$MAIL_PASSWORD}}}
+# e.g noreply@example.com
+MAIL_FROM_ADDRESS={{$MAIL_FROM_ADDRESS}}
+MAIL_FROM_NAME={{$MAIL_FROM_NAME}}
+@endif
+
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
-SECURITY_HEADER_HSTS_ENABLE=false
+_API_KEY_LENGTH=15
+_ANALYTICS_MAX_DAYS_DIFF=365
+_PSEUDO_RANDOM_KEY_LENGTH=5
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+# FILESYSTEM_DRIVER=local
+# FILESYSTEM_CLOUD=s3
 
-MAIL_DRIVER=smtp
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=
+# S3_KEY=null
+# S3_SECRET=null
+# S3_REGION=null
+# S3_BUCKET=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+# RACKSPACE_USERNAME=null
+# RACKSPACE_KEY=null
+# RACKSPACE_CONTAINER=null
+# RACKSPACE_REGION=null
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+# Set to 32 or 62 -- do not touch after initial configuration
+POLR_BASE={{$ST_BASE}}
+
+# Do not touch
+POLR_RELDATE={{env('VERSION_RELMONTH')}} {{env('VERSION_RELDAY')}}, {{env('VERSION_RELYEAR')}}
+POLR_VERSION={{env('VERSION')}}
+POLR_SECRET_BYTES=2
+
+TMP_SETUP_AUTH_KEY={{$TMP_SETUP_AUTH_KEY}}
