--- a/conf/.env.example
+++ b/conf/.env.example
@@ -13,7 +13,7 @@ APP_NAME={{$APP_NAME}}
 APP_PROTOCOL={{$APP_PROTOCOL}}
 
 # Your app's external address (e.g example.com)
-APP_ADDRESS=__DOMAIN__
+APP_ADDRESS={{$APP_ADDRESS}}
 
 # Your app's bootstrap stylesheet
 # e.g https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css
@@ -28,15 +28,15 @@ POLR_SETUP_RAN={{$POLR_SETUP_RAN}}
 
 DB_CONNECTION=mysql
 # Set to your DB host (e.g localhost)
-DB_HOST=localhost
+DB_HOST={{{$DB_HOST}}}
 # DB port (e.g 3306)
 DB_PORT={{$DB_PORT}}
 # Set to your DB name (e.g polr)
-DB_DATABASE=__DB_NAME__
+DB_DATABASE={{{$DB_DATABASE}}}
 # DB credentials
 # e.g root
-DB_USERNAME=__DB_NAME__
-DB_PASSWORD=__DB_PASS__
+DB_USERNAME={{{$DB_USERNAME}}}
+DB_PASSWORD={{{$DB_PASSWORD}}}
 
 # Polr Settings
 
