--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,7 +2,7 @@
 location ^~ __PATH__/ {
 
   # Path to source
-  alias __FINALPATH__/public ;
+  alias __FINALPATH__/public/ ;
 
   # Force usage of https
   if ($scheme = http) {
@@ -10,17 +10,11 @@ location ^~ __PATH__/ {
   }
 
   index index.php;
-
-  # setup for image upload
-  client_max_body_size 512M;
-
-  try_files $uri $uri/ __PATH__/__PATH__/index.php?$query_string;
   
-  location ~ \.php$ {
-        if (!-e $request_filename) {
-            rewrite ^__PATH__/?(.*)$ __PATH__/index.php?/$1 last;
-            break;
-        }
+  try_files $uri $uri/ index.php;
+
+  location ~ [^/]\.php(/|$) {
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
         fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
         fastcgi_index index.php;
         include fastcgi_params;
@@ -32,8 +26,4 @@ location ^~ __PATH__/ {
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
-}
-
-location @lychee {
-    rewrite __PATH__/(.*)$ __PATH__/index.php?/$1 last;
 }
